--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,13 @@
     --tag2-color: #eaecec;
     --border-color: #eaecec;
     --tech-stack-color: #ffffff;
-
+    --footer-color: #2c2c2c;
+    
     transition: background-color 0.2s ease, color 0.2s ease;
 }
 
 .dark-mode {
-    --background-color: #2c2c2c;
+    --background-color: #252525;
     --card-color: #484848;
     --text-color: #ffffff;
     --tag-color: #2c2c2c;
@@ -150,7 +151,7 @@ footer {
     height: 60px; /* Fixed height */
     width: var(--recontent-width);
     max-width: 100%;
-    background: #2c2c2c;
+    background: var(--footer-color);
     color: white;
     margin: 8px auto 0;
     border-radius: 12px 12px 0 0; /* Top-left and top-right corners */
